--- a/.github/workflows/ml_pipeline.yml
+++ b/.github/workflows/ml_pipeline.yml
@@ -3,6 +3,7 @@ name: ML Pipeline
 on:
   push:
   pull_request:
+  workflow_dispatch:  # 👈 allows manual triggering from GitHub UI
 
 jobs:
   build:
@@ -10,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -31,7 +32,7 @@ jobs:
         python ml_pipeline.py
 
     - name: Upload model artifact
-      uses: actions/upload-artifact@v3.1.3
+      uses: actions/upload-artifact@v4
       with:
         name: trained-model
         path: random_forest_model.joblib
